Fixes a11y issues with collection filter collapsing areas.

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -56,3 +56,8 @@
 #snipcart select option {
     background-color: rgba(0, 0, 0, 0);
 }
+
+// remove outline from collection filter divs with tab indexes
+.collection-filter-block div {
+    outline: none;
+}
